[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Login.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 19
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 287.0
margin_top = 102.0
margin_right = 691.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 1 )
text = "Tank Shooter by Arman Shaikh"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log" type="Button" parent="."]
margin_left = 441.0
margin_top = 266.0
margin_right = 539.0
margin_bottom = 286.0
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reg" type="Button" parent="."]
margin_left = 442.0
margin_top = 299.0
margin_right = 540.0
margin_bottom = 319.0
text = "Register"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 410.0
margin_top = 354.0
margin_right = 572.0
margin_bottom = 417.0
custom_fonts/font = SubResource( 2 )
text = "Incorrect username
 and or password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="."]
margin_left = 410.0
margin_top = 354.0
margin_right = 572.0
margin_bottom = 417.0
custom_fonts/font = SubResource( 2 )
text = "Logged in"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Userbox" type="TextEdit" parent="."]
margin_left = 415.0
margin_top = 193.0
margin_right = 559.0
margin_bottom = 217.0
text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Passbox" type="TextEdit" parent="."]
margin_left = 414.0
margin_top = 226.0
margin_right = 558.0
margin_bottom = 250.0
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Log" to="." method="_on_Log_pressed"]
[connection signal="pressed" from="Reg" to="." method="_on_Reg_pressed"]
